[package]
name = "bitcoin_wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.30.2", features = ["serde", "rand-std"] }
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7.8", features = ["with-uuid-1"] }
tokio-socks = "0.5"
rustls = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.0"
anyhow = "1.0"
hex = "0.4"
rand = "0.8"
aes-gcm = "0.10"
chrono = { version = "0.4", features = ["serde"] }
secp256k1 = { version = "0.27", features = ["rand-std"] }
clap = { version = "4.0", features = ["derive"] }
rustyline = "10.0"  # For interactive input
shell-words = "1.1"  # For proper command splitting

[[bin]]
name = "bitcoin-wallet"
path = "src/main.rs"